Add short and raw URLs to API response
